Updated forgetting of filter and variational smoother

--- a/variationalhmm.bib
+++ b/variationalhmm.bib
@@ -19,3 +19,9 @@
   booktitle = {Proceedings of Machine Learning Research vol 134, 34th Annual Conference on Learning Theory COLT 2021},
   year      = {2021}
 }
+
+@article{douc2004asymptotic,
+  title={Asymptotic properties of the maximum likelihood estimator in autoregressive models with Markov regime},
+  author={Douc, Randal and Moulines, Eric and Ryd{\'e}n, Tobias},
+  year={2004}
+}
