Updated application of Tang and Yang, Th3

--- a/variationalhmm.bib
+++ b/variationalhmm.bib
@@ -1,3 +1,12 @@
+@article{douc2001asymptotics,
+  title={Asymptotics of the maximum likelihood estimator for general hidden Markov models},
+  author={Douc, Randal and Matias, Catherine},
+  journal={Bernoulli},
+  pages={381--420},
+  year={2001},
+  publisher={JSTOR}
+}
+
 @article{koehler2021variational,
   title={Variational autoencoders in the presence of low-dimensional data: landscape and implicit bias},
   author={Koehler, Frederic and Mehta, Viraj and Risteski, Andrej and Zhou, Chenghui},
